generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  admin
  parent
  health_worker
}

// ── Administrative Location Hierarchy ────────────────────────────────────────

model Division {
  id        Int      @id @default(autoincrement())
  nameBn    String   @map("name_bn")
  nameEn    String   @map("name_en")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  districts     District[]
  parents       Parent[]
  healthWorkers HealthWorker[]
  children      Child[]

  @@map("divisions")
}

model District {
  id         Int      @id @default(autoincrement())
  divisionId Int      @map("division_id")
  nameBn     String   @map("name_bn")
  nameEn     String   @map("name_en")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  division      Division   @relation(fields: [divisionId], references: [id])
  upazilas      Upazilla[]
  parents       Parent[]
  healthWorkers HealthWorker[]
  children      Child[]

  @@map("districts")
}

model Upazilla {
  id         Int      @id @default(autoincrement())
  districtId Int      @map("district_id")
  nameBn     String   @map("name_bn")
  nameEn     String   @map("name_en")
  isUrban    Boolean  @default(false) @map("is_urban")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  district      District       @relation(fields: [districtId], references: [id])
  parents       Parent[]
  healthWorkers HealthWorker[]
  children      Child[]

  @@map("upazilas")
}

// ── User Management ──────────────────────────────────────────────────────────

model User {
  id         Int      @id @default(autoincrement())
  phone      String   @unique
  fullNameBn String   @map("full_name_bn")
  fullNameEn String?  @map("full_name_en")
  password   String
  role       UserRole
  onboarded  Boolean  @default(false)
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  parent             Parent?
  healthWorker       HealthWorker?
  growthMeasurements GrowthMeasurement[]
  illnessRecords     IllnessRecord[]

  @@map("users")
}

model Parent {
  id                Int       @id @default(autoincrement())
  userId            Int       @unique @map("user_id")
  isPregnant        Boolean   @default(false) @map("is_pregnant")
  dateOfBirth       DateTime? @map("date_of_birth")
  pregnancyDuration Int?      @map("pregnancy_duration")
  weight            Float?
  upazillaId        Int       @map("upazilla_id")
  districtId        Int       @map("district_id")
  divisionId        Int       @map("division_id")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")

  user     User     @relation(fields: [userId], references: [id])
  upazilla Upazilla @relation(fields: [upazillaId], references: [id])
  district District @relation(fields: [districtId], references: [id])
  division Division @relation(fields: [divisionId], references: [id])
  children         Child[]
  healthConditions ParentHealthCondition[]

  @@map("parents")
}

model ParentHealthCondition {
  id          Int      @id @default(autoincrement())
  parentId    Int      @map("parent_id")
  name        String
  description String?  @db.Text
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  parent Parent @relation(fields: [parentId], references: [id])

  @@map("parent_health_conditions")
}

model HealthWorker {
  id         Int      @id @default(autoincrement())
  userId     Int      @unique @map("user_id")
  upazillaId Int      @map("upazilla_id")
  districtId Int      @map("district_id")
  divisionId Int      @map("division_id")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  user     User     @relation(fields: [userId], references: [id])
  upazilla Upazilla @relation(fields: [upazillaId], references: [id])
  district District @relation(fields: [districtId], references: [id])
  division Division @relation(fields: [divisionId], references: [id])

  @@map("health_workers")
}

// ── Child & Health Tracking ──────────────────────────────────────────────────

model Child {
  id                     Int       @id @default(autoincrement())
  parentId               Int       @map("parent_id")
  fullNameBn             String    @map("full_name_bn")
  fullNameEn             String?   @map("full_name_en")
  gender                 String
  expectedDeliveryDate   DateTime? @map("expected_delivery_date")
  dateOfBirth            DateTime? @map("date_of_birth")
  bloodGroup             String?   @map("blood_group")
  birthLocation          String?   @map("birth_location")
  motherAgeAtEdd         Int?      @map("mother_age_at_edd")
  pregnancyComplications String?   @db.Text @map("pregnancy_complications")
  isBreastfed            Boolean   @default(false) @map("is_breastfed")
  birthComplications     String?   @db.Text @map("birth_complications")
  upazillaId             Int       @map("upazilla_id")
  districtId             Int       @map("district_id")
  divisionId             Int       @map("division_id")
  createdAt              DateTime  @default(now()) @map("created_at")
  updatedAt              DateTime  @updatedAt @map("updated_at")

  parent             Parent    @relation(fields: [parentId], references: [id])
  upazilla           Upazilla  @relation(fields: [upazillaId], references: [id])
  district           District  @relation(fields: [districtId], references: [id])
  division           Division  @relation(fields: [divisionId], references: [id])
  growthMeasurements GrowthMeasurement[]
  illnessRecords     IllnessRecord[]
  vaccinations       ChildVaccination[]

  @@map("children")
}

model GrowthMeasurement {
  id         Int      @id @default(autoincrement())
  childId    Int      @map("child_id")
  measuredBy Int      @map("measured_by")
  measuredAt DateTime @map("measured_at")
  ageDays    Int      @map("age_days")
  weightKg   Float    @map("weight_kg")
  heightCm   Float    @map("height_cm")
  notes      String?  @db.Text
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  child          Child @relation(fields: [childId], references: [id])
  measuredByUser User  @relation(fields: [measuredBy], references: [id])

  @@map("growth_measurements")
}

model IllnessRecord {
  id             Int       @id @default(autoincrement())
  childId        Int       @map("child_id")
  recordedBy     Int       @map("recorded_by")
  recordedAt     DateTime  @map("recorded_at")
  disease        String
  symptoms       String?   @db.Text
  treatmentGiven String?   @db.Text @map("treatment_given")
  doctorName     String?   @map("doctor_name")
  facilityName   String?   @map("facility_name")
  resolved       Boolean   @default(false)
  resolvedDate   DateTime? @map("resolved_date")
  notes          String?   @db.Text
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")

  child          Child @relation(fields: [childId], references: [id])
  recordedByUser User  @relation(fields: [recordedBy], references: [id])

  @@map("illness_records")
}

// Vaccine master list — required for ChildVaccination.vaccineId FK.
// Seed this with the Bangladesh EPI schedule (BCG, OPV, Pentavalent, PCV, IPV, MR, Vitamin A).
model Vaccine {
  id        Int      @id @default(autoincrement())
  nameEn    String   @map("name_en")
  nameBn    String   @map("name_bn")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relation to its specific doses
  doses     VaccineDose[]

  @@map("vaccines")
}

model VaccineDose {
  id              Int      @id @default(autoincrement())
  vaccineId       Int      @map("vaccine_id")
  doseNumber      Int      @map("dose_number") // For sorting and dependency logic (1, 2, 3)
  nameEn          String   @map("name_en")     // e.g., "Penta 1"
  nameBn          String   @map("name_bn")     // e.g., "পেন্টা ১"
  eligibleAgeDays Int      @map("eligible_age_days") // Age in days required for automatic scheduling
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  // Relations
  vaccine      Vaccine            @relation(fields: [vaccineId], references: [id])
  vaccinations ChildVaccination[]

  @@map("vaccine_doses")
}

model ChildVaccination {
  id            Int       @id @default(autoincrement())
  childId       Int       @map("child_id")
  vaccineDoseId Int       @map("vaccine_dose_id") // Swapped vaccineId out for vaccineDoseId
  scheduledDate DateTime  @map("scheduled_date")
  givenDate     DateTime? @map("given_date")
  facilityName  String?   @map("facility_name")
  isGiven       Boolean   @default(false) @map("is_given")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  // Relations
  child       Child       @relation(fields: [childId], references: [id])
  vaccineDose VaccineDose @relation(fields: [vaccineDoseId], references: [id])

  @@map("child_vaccinations")
}
