// SHISHU CARE — Database Schema
// Generated from prisma/schema.prisma (MySQL)

Project shishu_care {
  database_type: 'MySQL'
  Note: 'Child & Maternal Health Platform for Bangladesh'
}

enum user_role {
  admin
  parent
  health_worker
}

// ── Administrative Location Hierarchy ────────────────────────────────────────

Table divisions {
  id         int          [pk, increment]
  name_bn    varchar(255) [not null]
  name_en    varchar(255) [not null]
  created_at datetime     [not null, default: `now()`]
  updated_at datetime     [not null]
}

Table districts {
  id          int          [pk, increment]
  division_id int          [not null]
  name_bn     varchar(255) [not null]
  name_en     varchar(255) [not null]
  created_at  datetime     [not null, default: `now()`]
  updated_at  datetime     [not null]
}

Table upazilas {
  id          int          [pk, increment]
  district_id int          [not null]
  name_bn     varchar(255) [not null]
  name_en     varchar(255) [not null]
  is_urban    boolean      [not null, default: false]
  created_at  datetime     [not null, default: `now()`]
  updated_at  datetime     [not null]
}

// ── User Management ──────────────────────────────────────────────────────────

Table users {
  id           int          [pk, increment]
  phone        varchar(255) [not null, unique]
  full_name_bn varchar(255) [not null]
  full_name_en varchar(255) [null]
  password     varchar(255) [not null]
  role         user_role    [not null]
  created_at   datetime     [not null, default: `now()`]
  updated_at   datetime     [not null]
}

Table parents {
  id                 int      [pk, increment]
  user_id            int      [not null, unique]
  is_pregnant        boolean  [not null, default: false]
  date_of_birth      datetime [null]
  pregnancy_duration int      [null]
  weight             float    [null]
  upazilla_id        int      [not null]
  district_id        int      [not null]
  division_id        int      [not null]
  created_at         datetime [not null, default: `now()`]
  updated_at         datetime [not null]
}

Table health_workers {
  id          int      [pk, increment]
  user_id     int      [not null, unique]
  upazilla_id int      [not null]
  district_id int      [not null]
  division_id int      [not null]
  created_at  datetime [not null, default: `now()`]
  updated_at  datetime [not null]
}

Table parent_health_conditions {
  id          int          [pk, increment]
  parent_id   int          [not null]
  name        varchar(255) [not null, note: 'Condition name from chip or free-text input']
  description text         [null,     note: 'Optional detail, used for "Other" entries']
  created_at  datetime     [not null, default: `now()`]
  updated_at  datetime     [not null]
}

// ── Child & Health Tracking ──────────────────────────────────────────────────

Table children {
  id                     int          [pk, increment]
  parent_id              int          [not null]
  full_name_bn           varchar(255) [not null]
  full_name_en           varchar(255) [null]
  gender                 varchar(20)  [not null]
  expected_delivery_date datetime     [null]
  date_of_birth          datetime     [null]
  blood_group            varchar(20)  [null]
  birth_location         varchar(255) [null]
  mother_age_at_edd      int          [null]
  pregnancy_complications text        [null]
  is_breastfed           boolean      [not null, default: false]
  birth_complications    text         [null]
  upazilla_id            int          [not null]
  district_id            int          [not null]
  division_id            int          [not null]
  created_at             datetime     [not null, default: `now()`]
  updated_at             datetime     [not null]
}

Table growth_measurements {
  id          int      [pk, increment]
  child_id    int      [not null]
  measured_by int      [not null]
  measured_at datetime [not null]
  age_days    int      [not null]
  weight_kg   float    [not null]
  height_cm   float    [not null]
  notes       text     [null]
  created_at  datetime [not null, default: `now()`]
  updated_at  datetime [not null]
}

Table illness_records {
  id              int          [pk, increment]
  child_id        int          [not null]
  recorded_by     int          [not null]
  recorded_at     datetime     [not null]
  disease         varchar(255) [not null]
  symptoms        text         [null]
  treatment_given text         [null]
  doctor_name     varchar(255) [null]
  facility_name   varchar(255) [null]
  resolved        boolean      [not null, default: false]
  resolved_date   datetime     [null]
  notes           text         [null]
  created_at      datetime     [not null, default: `now()`]
  updated_at      datetime     [not null]
}

Table vaccines {
  id         int          [pk, increment]
  name_en    varchar(255) [not null]
  name_bn    varchar(255) [not null]
  created_at datetime     [not null, default: `now()`]
  updated_at datetime     [not null]
}

Table vaccine_doses {
  id                int          [pk, increment]
  vaccine_id        int          [not null]
  dose_number       int          [not null, note: 'For sorting and dependency logic (1, 2, 3)']
  name_en           varchar(255) [not null, note: 'e.g. Penta 1']
  name_bn           varchar(255) [not null, note: 'e.g. পেন্টা ১']
  eligible_age_days int          [not null, note: 'Age in days required for automatic scheduling']
  created_at        datetime     [not null, default: `now()`]
  updated_at        datetime     [not null]
}

Table child_vaccinations {
  id               int          [pk, increment]
  child_id         int          [not null]
  vaccine_dose_id  int          [not null]
  scheduled_date   datetime     [not null]
  given_date       datetime     [null]
  facility_name    varchar(255) [null]
  is_given         boolean      [not null, default: false]
  created_at       datetime     [not null, default: `now()`]
  updated_at       datetime     [not null]
}

// ── Relationships ─────────────────────────────────────────────────────────────

Ref: districts.division_id > divisions.id
Ref: upazilas.district_id > districts.id

Ref: parents.user_id - users.id          // one-to-one
Ref: parents.upazilla_id > upazilas.id
Ref: parents.district_id > districts.id
Ref: parents.division_id > divisions.id

Ref: health_workers.user_id - users.id   // one-to-one
Ref: health_workers.upazilla_id > upazilas.id
Ref: health_workers.district_id > districts.id
Ref: health_workers.division_id > divisions.id

Ref: children.parent_id > parents.id
Ref: children.upazilla_id > upazilas.id
Ref: children.district_id > districts.id
Ref: children.division_id > divisions.id

Ref: growth_measurements.child_id > children.id
Ref: growth_measurements.measured_by > users.id

Ref: illness_records.child_id > children.id
Ref: illness_records.recorded_by > users.id

Ref: parent_health_conditions.parent_id > parents.id

Ref: vaccine_doses.vaccine_id > vaccines.id

Ref: child_vaccinations.child_id > children.id
Ref: child_vaccinations.vaccine_dose_id > vaccine_doses.id
